[tool.poetry]
name = "eve2bits"
version = "0.1.0"
description = ""
authors = ["Garth Ilsley <ilsley@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
